# Daily-Job-Hub

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: admin.py  ai.py  health.py  ingest.py  jobs.py  recommendations.py  search.py  user_activity.py
apps/api/app/core/: categories.py  config.py  errors.py  logging.py  middleware.py  retry.py
apps/api/app/db/: postgres.py
apps/api/app/models/: __init__.py  entities.py  enums.py
apps/api/app/repositories/: ai_repository.py  embeddings_repository.py  jobs_ingestion_repository.py  jobs_repository.py  recommendations_repository.py  scrape_repository.py  user_activity_repository.py
apps/api/app/schemas/: ai.py  jobs.py  user_activity.py
apps/api/app/scrapers/: adzuna.py  arbeitnow.py  ashby.py  common.py  greenhouse.py  jobicy.py  lever.py  remoteok.py  remotive.py  sources.py  yc.py
apps/api/app/services/: ai_service.py  embedding_service.py  ingestion_service.py  pdf_service.py  recommendation_service.py  resume_service.py  search_service.py
apps/api/app/workers/: celery_app.py  tasks.py
apps/web/: Dockerfile  README.md  auth.ts  middleware.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(marketing)/: layout.tsx  page.tsx
apps/web/lib/: api.ts  client-api.ts
apps/web/store/: useJobStore.ts
docker/postgres-init/: 01-extensions.sql
prisma/: schema.prisma  vector-indexes.sql
prisma/migrations/0001_init/: migration.sql
prisma/migrations/0002_gemini_embeddings_768/: migration.sql
(+33 files in other folders)
