[project]
name = "daily-job-hub-api"
version = "0.1.0"
description = "FastAPI AI + scraping services for Daily Job Hub"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "httpx>=0.27.2",
  "beautifulsoup4>=4.12.3",
  "playwright>=1.47.0",
  "openai>=1.51.0",
  "google-generativeai>=0.8.3",
  "groq>=0.11.0",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "psycopg[binary]>=3.2.2",
  "pgvector>=0.3.5",
  "python-multipart>=0.0.12",
  "pypdf>=5.0.1"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
