[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-job-hub-api"
version = "0.1.0"
description = "FastAPI AI + scraping services for Daily Job Hub"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "httpx>=0.27.2",
  "beautifulsoup4>=4.12.3",
  "playwright>=1.47.0",
  "openai>=1.51.0",
  "google-generativeai>=0.8.3",
  "groq>=0.11.0",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "psycopg[binary]>=3.2.2",
  "psycopg-pool>=3.2.2",
  "pgvector>=0.3.5",
  "python-multipart>=0.0.12",
  "pypdf>=5.0.1"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "mypy>=1.11.2"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
